commit fix div's overflow

--- a/static/css/nicepage.css
+++ b/static/css/nicepage.css
@@ -44333,7 +44333,7 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-header .u-text-1 {
     margin-top: -72px;
     margin-bottom: 25px;
-    margin-left: 58px;
+    margin-left: 90px;
   }
 }
 @media (max-width: 767px) {
